Add support for code completion
Based on this tutorial: https://medium.com/ballerina-techblog/practical-guide-for-the-language-server-protocol-3091a122b750